fix profile image height on smaller screen

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -350,6 +350,11 @@
       background: #aaa;
     }
   }
+
+  .file-input {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @media only screen and (max-width: 530px) {
